--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.3.1
+dj-database-url==0.5.0
 Django==3.1.7
 django-crispy-forms==1.11.2
 django-heroku==0.3.1
 gunicorn==20.0.4
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+python-dotenv==0.17.0
 pytz==2021.1
 sqlparse==0.4.1
-dj-database-url==0.5.0
 whitenoise==4.1.3
