--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-autocomplete-light==3.8.2
 django-crispy-forms==1.11.2
 django-heroku==0.3.1
 django-mathfilters==1.0.0
+django-pwa==1.0.10
 future==0.18.2
 gunicorn==20.0.4
 html5lib==1.1
