--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,17 @@ diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.1.7
 django-autocomplete-light==3.8.2
+django-cors-headers==3.8.0
 django-crispy-forms==1.11.2
 django-heroku==0.3.1
 django-import-export==2.5.0
 django-mathfilters==1.0.0
 django-pwa==1.0.10
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+et-xmlfile==1.1.0
 future==0.18.2
+GDAL==3.2.1
 gunicorn==20.0.4
 html5lib==1.1
 MarkupPy==1.14
@@ -19,6 +24,7 @@ openpyxl==3.0.7
 Pillow==8.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+PyJWT==2.1.0
 PyPDF2==1.26.0
 python-bidi==0.4.2
 python-dotenv==0.17.0
@@ -33,6 +39,3 @@ whitenoise==4.1.3
 xhtml2pdf==0.2.5
 xlrd==2.0.1
 xlwt==1.3.0
-pip~=21.0.1
-setuptools~=41.2.0
-djangorestframework~=3.12.4
