--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django-import-export==2.5.0
 django-mathfilters==1.0.0
 django-pwa==1.0.10
 djangorestframework==3.12.4
-djangorestframework-simplejwt==4.8.0
+# djangorestframework-simplejwt==4.8.0
 et-xmlfile==1.1.0
 future==0.18.2
 GDAL==3.2.1
@@ -24,7 +24,7 @@ openpyxl==3.0.7
 Pillow==8.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
-PyJWT==2.1.0
+# PyJWT==2.1.0
 PyPDF2==1.26.0
 python-bidi==0.4.2
 python-dotenv==0.17.0
